<resources>
    <string name="app_name">STEMI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="manually_enter_ip">MANUALLY ENTER IP</string>
    <string name="hint_default_ip">Default STEMI IP address is: \n 192.168.4.1</string>
    <string name="choose_a_walking_style">Choose a walking style</string>
    <string name="movement_hint">Allows linear movements (left, right, back, forward). Tap to enable.</string>
    <string name="rotation_hint">Allows rotational movements with fixed stemi. Tap to enable.</string>
    <string name="orientation_hint">Combination of movement and rotation. Tap to enable.</string>
    <string name="height_hint">Tap to manually adjust the height of STEMI\'s body.</string>
    <string name="calibration_hint">Tap to manually adjust the position of each joint on each leg.</string>
    <string name="walkstyle_hint">Switch between different walk styes.</string>
    <string name="tripod_desc">Have three legs standing on the ground supporting the body while the other three swing forward. Fastest Gait.</string>
    <string name="tripod_delayed_desc">Have three legs standing on the ground supporting the body while the other three swing forward. Lifting and lowering of each leg is slightly delayed to feel more lifelike.</string>
    <string name="ripple_desc">At every moment there are two legs swinging in the air while other four stand on the ground supporting the body. This is the coolest Gait of all but a bit slower than Tripod Gaits.</string>
    <string name="wave_desc">Only one leg is swinging lifted in the air while all other stand on the ground supporting the body. This is the slowest Gait but consumes less power and can carry more weight.</string>
    <string name="reset_to_default_values">RESET TO DEFAULT VALUES</string>
    <string name="hint_noConnection">Make sure your STEMI Hexapod is charged, turned on and connected to your phone or home network via wifi.</string>
    <string name="unable_to_connect">UNABLE TO CONNECT TO YOUR STEMI HEXAPOD</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="pairing">PAIRING&#8230;</string>
    <string name="select_motor_n_you_wish_to_n_calibrate">Select motor \n you wish to \n calibrate</string>
    <string name="if_you_have_a_stemi_hexapod_simply_connect_it_now">If you have a STEMI Hexapod, simply connect it now.</string>
    <string name="get_started">GET STARTED</string>
    <string name="connect">Connect</string>
    <string name="change_ip">Change IP</string>
    <string name="custom_ip">Custom IP</string>
    <string name="tripod_gait">Tripod Gait</string>
    <string name="ripple_gait">Ripple Gait</string>
    <string name="tripod_delayed_gait">Tripod Delayed Gait</string>
    <string name="wave_gait">Wave Gait</string>
    <string name="check_connection">Please check connection with your STEMI and try again.</string>
    <string name="connection_lost">Connection lost</string>
    <string name="standby_mode_active">Standby mode active</string>
    <string name="standby_mode_message">STEMI Hexapod is in standby mode. Please activate your STEMI Hexapod if you want to use this feature.</string>
    <string name="ok">OK</string>
    <string name="movement_enabled">MOVEMENT ENABLED</string>
    <string name="rotation_enabled">ROTATION ENABLED</string>
    <string name="orientation_enabled">ORIENTATION ENABLED</string>
    <string name="movement">Movement</string>
    <string name="rotation">Rotation</string>
    <string name="orientation">Orientation</string>
    <string name="height">Height</string>
    <string name="calibration">Calibration</string>
    <string name="walk_style">Walk style</string>
    <string name="warning">Warning</string>
    <string name="reset_to_initial">Are you sure you want to reset STEMI Hexapod legs to their initial positions?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="canceling">Canceling&#8230;</string>
    <string name="error">Error</string>
    <string name="out_of_range">IP fields must be in range 0&#8211;255</string>
    <string name="resetting">Resetting&#8230;</string>

</resources>
