<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStyleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/choose_a_walking_style"
        android:textColor="@color/highlightColor"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/rgWalk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:buttonTint="@color/highlightColor"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="@string/tripod_gait"
            android:textAlignment="textStart"
            android:textColor="@color/highlightColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:buttonTint="@color/highlightColor"
            android:layoutDirection="rtl"
            android:text="@string/tripod_delayed_gait"
            android:textAlignment="textStart"
            android:textColor="@color/highlightColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:buttonTint="@color/highlightColor"
            android:layoutDirection="rtl"
            android:text="@string/ripple_gait"
            android:textAlignment="textStart"
            android:textColor="@color/highlightColor"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:buttonTint="@color/highlightColor"
            android:layoutDirection="rtl"
            android:text="@string/wave_gait"
            android:textAlignment="textStart"
            android:textColor="@color/highlightColor"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvWalkDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:alpha="0.6"
        android:textColor="@color/highlightColor"
        android:textSize="13sp" />
</LinearLayout>
